--- a/index.html
+++ b/index.html
@@ -9,7 +9,61 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
 		<script type="text/javascript">
+			function calcular() {
 
+				var operacao = document.getElementById('operacao').value;
+
+				var num1 = document.getElementById('num1').value;
+
+				var num2 = document.getElementById('num2').value;
+
+				if (num1 == '' || num1 == null) {
+					alert('Informe o primeiro valor!');
+					return;
+				}
+
+				if (num2 == '' || num2 == null) {
+					alert('Informe o segundo valor!');
+					return;
+				}
+
+				num1 = parseFloat(num1);
+
+				num2 = parseFloat(num2);
+
+				var resultado = null;
+
+				switch(operacao) {
+
+					case '1': // subtração
+						resultado = num1 - num2;
+						break;
+
+					case '2': // adição
+						resultado = num1 + num2;
+						break;
+
+					case '3': // multiplicação
+						resultado = num1 * num2;
+						break;
+
+					case '4': // divisão
+						if (num2 == 0) {
+							alert('Não, nunca, jamais, divida por ZERO!');
+							return;
+						}
+
+						resultado = num1 / num2;
+						break;
+
+					default: 
+						alert('A opção selecionada é inválida');
+						return false;
+				}
+
+				document.getElementById('resultado').value = resultado;
+
+			}
 		</script>
 	</head>
 
@@ -29,7 +83,7 @@
 
 				<div class="col-md-4">
 					<select id="operacao" class="form-control">
-						<option value="">--Selecione uma operação</option>
+						<option value="">-- Selecione uma operação --</option>
 						<option value="1">Subtração</option>
 						<option value="2">Adição</option>
 						<option value="3">Multiplicação</option>
@@ -50,7 +104,7 @@
 				<div class="col-md-4"></div>
 
 				<div class="col-md-4">
-					<button type="button" class="btn btn-lg btn-primary pull-right">Calcular</button>
+					<button type="button" class="btn btn-lg btn-primary pull-right" onclick="calcular()">Calcular</button>
 				</div>
 			</div>
 
